[package]
name = "webrtc-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
gst = { package = "gstreamer", version = "0.23" }
gst-video = { package = "gstreamer-video", version = "0.23" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.23" }
gst-app = { package = "gstreamer-app", version = "0.23" }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
