[package]
name = "webrtc-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
gst = { package = "gstreamer", version = "0.24" }
gst-video = { package = "gstreamer-video", version = "0.24" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.24" }
gst-app = { package = "gstreamer-app", version = "0.24" }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
